--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -24,12 +24,6 @@ jobs:
         run: |
           python -m pip install --upgrade requests
           python -m pip install --upgrade beautifulsoup4
-
-      - name: 'Auto_renew'
-        env:
-          USERNAME: ${{ secrets.USERNAME }}
-          PASSWORD: ${{ secrets.PASSWORD }}
-        run: python main.py
       - name: log push  #获得自动部署的时间
         run: | 
           echo `date +"%Y-%m-%d %H:%M:%S"` begin > time.log
@@ -37,9 +31,17 @@ jobs:
         run: |
           git config --global user.email AutoupdateRobot@email.com
           git config --global user.name AutoupdateRobot
+          git pull
           git add .
           git commit -m "update new push" -a
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+        
+      - name: 'Auto_renew'
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+        run: python main.py
+      
