--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,6 +26,7 @@ jobs:
           python -m pip install --upgrade beautifulsoup4
       - name: log push  #获得自动部署的时间
         run: | 
+          rm -rf time.log
           echo `date +"%Y-%m-%d %H:%M:%S"` begin > time.log
       - name: Commit #上传到仓库
         run: |
